force-app/main/default/objects/Relationship__c/fields/Collateral__c.field-meta.xml
<CustomField>
    <fullName>Collateral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collateral</label>
    <referenceTo>Collateral__c</referenceTo>
    <relationshipLabel>Relationships</relationshipLabel>
    <relationshipName>Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>