force-app/main/default/objects/Relationship__c/fields/Person_Related_To__c.field-meta.xml
<CustomField>
    <fullName>Person_Related_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person Related To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Relationships (Person Related To)</relationshipLabel>
    <relationshipName>Relationships2</relationshipName>
    <type>Lookup</type>
</CustomField>