force-app/main/default/objects/Relationship__c/fields/Relationship_Values__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Values__c</fullName>
    <label>Relationship Values</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brother - Adoptive</fullName>
            </value>
            <value>
                <fullName>Brother - Biological</fullName>
            </value>
            <value>
                <fullName>Brother - Half</fullName>
            </value>
            <value>
                <fullName>Brother - Step</fullName>
            </value>
            <value>
                <fullName>Child care provider/worker</fullName>
            </value>
            <value>
                <fullName>Child - Adoptive</fullName>
            </value>
            <value>
                <fullName>Child - Biological</fullName>
            </value>
            <value>
                <fullName>Child - Custodial/Guardianship</fullName>
            </value>
            <value>
                <fullName>Child - Foster</fullName>
            </value>
            <value>
                <fullName>Child - Putative</fullName>
            </value>
            <value>
                <fullName>Child - Step</fullName>
            </value>
            <value>
                <fullName>Co-Worker</fullName>
            </value>
            <value>
                <fullName>Daycare Child</fullName>
            </value>
            <value>
                <fullName>Father - Adoptive</fullName>
            </value>
            <value>
                <fullName>Father - Biological</fullName>
            </value>
            <value>
                <fullName>Father - Foster</fullName>
            </value>
            <value>
                <fullName>Father - Putative</fullName>
            </value>
            <value>
                <fullName>Father - Step</fullName>
            </value>
            <value>
                <fullName>Foster - Parent</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Godchild</fullName>
            </value>
            <value>
                <fullName>Godparent</fullName>
            </value>
            <value>
                <fullName>Custodial/Guardianship</fullName>
            </value>
            <value>
                <fullName>In-law</fullName>
            </value>
            <value>
                <fullName>Maternal Aunt</fullName>
            </value>
            <value>
                <fullName>Maternal Cousin</fullName>
            </value>
            <value>
                <fullName>Maternal Grandchild</fullName>
            </value>
            <value>
                <fullName>Maternal Grandparent</fullName>
            </value>
            <value>
                <fullName>Maternal Great Aunt/Uncle</fullName>
            </value>
            <value>
                <fullName>Maternal Great Grandchild</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>