force-app/main/default/objects/Relationship__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attorney Adult</fullName>
            </value>
            <value>
                <fullName>Attorney Child</fullName>
            </value>
            <value>
                <fullName>Attorney Other</fullName>
            </value>
            <value>
                <fullName>Caretaker/Caregiver</fullName>
            </value>
            <value>
                <fullName>Child Advocate - CASA</fullName>
            </value>
            <value>
                <fullName>Child Welfare Staff</fullName>
            </value>
            <value>
                <fullName>Clergy</fullName>
            </value>
            <value>
                <fullName>Counselor/Therapist</fullName>
            </value>
            <value>
                <fullName>Day Care Staff</fullName>
            </value>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Detention Center Staff</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Guardian – Ad litem</fullName>
            </value>
            <value>
                <fullName>Hospital Staff</fullName>
            </value>
            <value>
                <fullName>Living Arrangement Contact</fullName>
            </value>
            <value>
                <fullName>Medical Consultant</fullName>
            </value>
            <value>
                <fullName>Medical Professional</fullName>
            </value>
            <value>
                <fullName>Neighbor</fullName>
            </value>
            <value>
                <fullName>Parent Surrogate</fullName>
            </value>
            <value>
                <fullName>Parole Officer</fullName>
            </value>
            <value>
                <fullName>Probation Officer</fullName>
            </value>
            <value>
                <fullName>Relative</fullName>
            </value>
            <value>
                <fullName>School Staff</fullName>
            </value>
            <value>
                <fullName>Truancy Officer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>